[package]
name = "cdimage"
version = "0.1.0"
authors = ["Lionel Flandrin <lionel.flandrin@gmail.com>"]
description = "Generic interface to manipulate various CD image formats"

license = "MIT/Apache-2.0"

[features]
serde = ["dep:serde", "dep:serde-big-array"]

[dependencies]
arrayref = "0.3"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde-big-array = { version = "0.4", optional = true}
thiserror = "1.0"
zip = "0.6"
