[package]
name = "cdimage"
version = "1.0.0"
authors = ["Lionel Flandrin <lionel.flandrin@gmail.com>"]
description = "Generic interface to manipulate various CD image formats"
edition = "2021"

license = "MIT/Apache-2.0"

[features]
serde = ["dep:serde", "dep:serde-big-array"]

[dependencies]
arrayref = "0.3"
serde = { version = "1.0", optional = true, features = ["derive"] }
serde-big-array = { version = "0.4", optional = true}
thiserror = "1.0"
zip = "0.6"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
